<resources>
    <string name="app_name">SpeleoMap</string>

    <!-- Main activity-->
    <string name="button_bluetooth">Bluetooth</string>
    <string name="button_maps">Maps</string>
    <string name="button_settings">Settings</string>

    <!--Bluetooth activity -->
    <string name="textview_search">Search and connect to DistoX</string>
    <string name="switch_bluetooth">Bluetooth</string>
    <string name="checkbox_distox">Only DistoX</string>

    <!--Maps activity -->
    <string name="button_new_map">New cave map</string>

    <!--New map activity -->
    <string name="textview_new_map">New map name:</string>
    <string name="button_create_map">Create map</string>

    <!--Listview headers -->
    <string name="h1">_From</string>
    <string name="h2">_To</string>
    <string name="h3">_Distance</string>
    <string name="h4">_Azimuth</string>
    <string name="h5">_Inclination</string>

    <!--Data activity -->
    <string name="button_skeleton">Skeleton</string>
    <string name="button_sketch">Sketch</string>
    <string name="button_save">Save</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_connect">Connect</string>
    <string name="button_area">Area</string>
    <string name="button_add">Add</string>

    <!-- Skeleton activity -->
    <string name="button_back">Back</string>
    <string name="textview_length"> Length:</string>
    <string name="textview_area"> Area:</string>

    <!-- Point connect activity -->
    <string name="textview_point1">Point1:</string>
    <string name="textview_point2">Point2:</string>
    <string name="button_connect_point">Connect</string>
    <string name="button_disconnect_point">Disconnect</string>

    <!-- UpdateData activity -->
    <string name="textview_from">From:</string>
    <string name="textview_to">To:</string>
    <string name="textview_distance">Distance:</string>
    <string name="textview_azimuth">Azimuth:</string>
    <string name="textview_inclination">Inclination:</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>

    <!-- Point connect activity -->
    <string name="button_connect_points">Connect</string>
    <string name="button_disconnect_points">Disconnect</string>

</resources>
