<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <!--  First header line -->
    <TextView android:id="@+id/header_line1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#f00"
            />
    <!-- Second header line -->
    <TextView android:id="@+id/header_line2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="#0f0"
            />

    <!-- Third header line and column headings -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#006"
            >
        <TextView android:id="@+id/column_header1"
                  android:text="@string/h1"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                />
        <TextView android:id="@+id/column_header2"
                  android:text="@string/h2"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.95"
                />
        <TextView android:id="@+id/column_header3"
                  android:text="@string/h3"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                />
        <TextView android:id="@+id/column_header4"
                  android:text="@string/h4"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                />
        <TextView android:id="@+id/column_header5"
                  android:text="@string/h5"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                />
    </LinearLayout>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewData" android:layout_below="@+id/header_line1" android:layout_alignParentLeft="true"
            android:layout_above="@+id/buttonSkeleton"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_skeleton"
            android:id="@+id/buttonSkeleton" android:layout_alignParentBottom="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sketch"
            android:id="@+id/buttonSketch" android:layout_below="@+id/listViewData"
            android:layout_toRightOf="@+id/buttonSkeleton"/>

</RelativeLayout>