<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_bluetooth"
            android:id="@+id/buttonBluetooth"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_maps"
            android:id="@+id/buttonMaps"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_settings"
            android:id="@+id/buttonSettings"/>
</LinearLayout>